--- a/scss/common/components/_forms.scss
+++ b/scss/common/components/_forms.scss
@@ -405,8 +405,8 @@ input[type=file] {
     height: 8px;
     background:theme('color.secondary');
     border-radius: 50%;
-    top: 6px;
-    left: 6px;
+    // top: 6px;
+    // left: 6px;
     -webkit-transform: scale(0);
     transform: scale(0)
 }
