--- a/scss/common/components/_lists.scss
+++ b/scss/common/components/_lists.scss
@@ -31,10 +31,10 @@
     top: -1px
 }
 
-.list-inline label .checkbox .input-helper:after,
-.list-inline label .radio .input-helper:after {
-    top: 6px
-}
+// .list-inline label .checkbox .input-helper:after,
+// .list-inline label .radio .input-helper:after {
+//     top: 6px
+// }
 
 .list-inline .is-active label{
     color: var(--color-secondary);
